Prevent icons below AddTweetForm input from shifting layout on hover

--- a/src/components/AddTweetForm/AddTweetForm.scss
+++ b/src/components/AddTweetForm/AddTweetForm.scss
@@ -49,6 +49,7 @@ $gray: #657786;
         font-size: 20px;
 
         .fa {
+          border: 1px solid transparent;
           color: lighten($green, 12%);
           margin: 0 10px;
           padding: 8px 12px;
